--- a/init.engineer-iOS-App/View/Base.lproj/DashboardView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/DashboardView.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -25,7 +26,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5jA-wT-XaR">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="268"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="288"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bAb-nR-9vq">
                                                 <rect key="frame" x="20" y="30" width="374" height="88"/>
@@ -73,6 +74,13 @@
                                                     </stackView>
                                                 </subviews>
                                             </stackView>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="npZ-mU-f1l">
+                                                <rect key="frame" x="20" y="258" width="374" height="0.0"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" id="faV-kv-R3T"/>
+                                                </constraints>
+                                            </tableView>
                                         </subviews>
                                         <edgeInsets key="layoutMargins" top="30" left="20" bottom="30" right="20"/>
                                     </stackView>
@@ -100,6 +108,8 @@
                     <tabBarItem key="tabBarItem" title="儀錶板" id="g8e-zp-7sM"/>
                     <navigationItem key="navigationItem" id="jgb-qh-ess"/>
                     <connections>
+                        <outlet property="userArticleTableView" destination="npZ-mU-f1l" id="spa-Mk-jrp"/>
+                        <outlet property="userArticleTableViewHeight" destination="faV-kv-R3T" id="v6r-iB-o4s"/>
                         <outlet property="userAvatarImageView" destination="zNo-zF-G8c" id="T2u-k0-X63"/>
                         <outlet property="userEmail" destination="qZj-Kt-7am" id="Fs4-rC-ESf"/>
                         <outlet property="userInformationStackView" destination="xH8-ZC-0yy" id="M3o-zb-rQ5"/>
@@ -143,5 +153,8 @@
         <image name="baseline_person_black_18pt" width="18" height="18"/>
         <image name="baseline_person_black_24pt" width="24" height="24"/>
         <image name="no_avatar" width="64" height="64"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
