--- a/init.engineer-iOS-App/View/Base.lproj/DashboardView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/DashboardView.storyboard
@@ -80,6 +80,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" id="faV-kv-R3T"/>
                                                 </constraints>
+                                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </tableView>
                                         </subviews>
                                         <edgeInsets key="layoutMargins" top="30" left="20" bottom="30" right="20"/>
